# SVMender

./: AlignmentReport.h  AlignmentReporter.h  Allele.h  AlleleMetaData.h  CMakeLists.txt  GSSWGraph.cpp  GSSWGraph.h  IAlignment.h  IAllele.h  IGraph.h  IHeader.h  IMapping.h  INode.h  IReference.h  IVariant.h  IVariantList.h  Noncopyable.hpp  Region.cpp  Region.h  SVMender.cc  Sample.cpp  Sample.h  ThreadPool.hpp  Types.h  Utility.cpp  Utility.h  gssw.c  gssw.h  gsw.cpp
